# ssvm-automaton-displayer

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  dot_to_svg.c  notes.md
node/: app.js
src/: lib.rs  main.rs
src/c/: mygvc.c
