[package]
name = "ssvm_automaton_displayer"
version = "0.1.0"
authors = ["Pierre Gimalac <pierre.gimalac@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "A Rust/nodejs project using the second state virtual machine to display given regexes as automatons"
readme = "README.md"
homepage = "https://github.com/pgimalac/ssvm-automaton-displayer"
repository = "https://github.com/pgimalac/ssvm-automaton-displayer"
license = "MIT"

[package.metadata.ssvmup.profile.release]
wasm-opt = ['-O4']

[lib]
name = "ssvm_automaton_displayer"
path = "src/lib.rs"
crate-type =["cdylib"]

[[bin]]
name = "automaton_displayer"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "=0.2.61"
rustomaton="0.2"
clap = "2.33.1"

[build-dependencies]
cc = "1.0.54"
